# langr

./: .gitignore  CHANGELOG.md  Cargo.toml  MODEL_CARD.md  README.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  cron.yml  publish.yml
examples/: bench.rs  calibrate.rs  eval.rs
models/: manifest.json
sample-corpus/de/: sample.txt
sample-corpus/en/: sample.txt
sample-corpus/es/: sample.txt
sample-corpus/fr/: sample.txt
scripts/: fetch-tokenizer.sh  gen-notices.sh
src/: detect.rs  lib.rs  model.rs  schema.rs  tokenizer.rs  train.rs
