[package]
name = "langr"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Fast, low-memory single-purpose language detector using an LLM subword vocab and token->language posteriors."
repository = "https://github.com/kryptic-sh/langr"
readme = "README.md"
keywords = ["language", "detection", "nlp", "tokenizer", "langid"]
categories = ["text-processing"]

[lib]
name = "langr"
path = "src/lib.rs"

[[bin]]
name = "langr-train"
path = "src/bin/train.rs"

[[bin]]
name = "langr-detect"
path = "src/bin/detect.rs"

[dependencies]
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"

[profile.release]
lto = "thin"
