[package]
name = "langr"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Fast, low-memory single-purpose language detector using an LLM subword vocab and token->language posteriors."
repository = "https://github.com/kryptic-sh/langr"
readme = "README.md"
keywords = ["language", "detection", "nlp", "tokenizer", "langid"]
categories = ["text-processing"]

[lib]
name = "langr"
path = "src/lib.rs"

[[bin]]
name = "langr-train"
path = "src/bin/train.rs"

[[bin]]
name = "langr-detect"
path = "src/bin/detect.rs"

[[bin]]
name = "langr-corpus"
path = "src/bin/corpus.rs"
required-features = ["corpus"]

[features]
# Opt-in corpus downloader; keeps the HTTP/bzip2/xz/gzip stack out of detection-only builds.
corpus = ["dep:ureq", "dep:bzip2-rs", "dep:xz2", "dep:flate2"]

[dependencies]
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
ureq = { version = "2", optional = true }
bzip2-rs = { version = "0.1", optional = true }
xz2 = { version = "0.1", optional = true }
flate2 = { version = "1", optional = true }

[profile.release]
lto = "thin"
